--- a/Box2D/Box2D/CMakeLists.txt
+++ b/Box2D/Box2D/CMakeLists.txt
@@ -89,6 +89,7 @@ set(BOX2D_Joints_SRCS
 	Dynamics/Joints/b2FrictionJoint.cpp
 	Dynamics/Joints/b2GearJoint.cpp
 	Dynamics/Joints/b2Joint.cpp
+	Dynamics/Joints/b2MotorJoint.cpp
 	Dynamics/Joints/b2MouseJoint.cpp
 	Dynamics/Joints/b2PrismaticJoint.cpp
 	Dynamics/Joints/b2PulleyJoint.cpp
@@ -102,6 +103,7 @@ set(BOX2D_Joints_HDRS
 	Dynamics/Joints/b2FrictionJoint.h
 	Dynamics/Joints/b2GearJoint.h
 	Dynamics/Joints/b2Joint.h
+	Dynamics/Joints/b2MotorJoint.h
 	Dynamics/Joints/b2MouseJoint.h
 	Dynamics/Joints/b2PrismaticJoint.h
 	Dynamics/Joints/b2PulleyJoint.h
@@ -180,26 +182,26 @@ source_group(Dynamics\\Joints FILES ${BOX2D_Joints_SRCS} ${BOX2D_Joints_HDRS})
 source_group(Include FILES ${BOX2D_General_HDRS})
 source_group(Rope FILES ${BOX2D_Rope_SRCS} ${BOX2D_Rope_HDRS})
 
-if(BOX2D_INSTALL)
+#if(BOX2D_INSTALL)
 	# install headers
-	install(FILES ${BOX2D_General_HDRS} DESTINATION include/Box2D)
-	install(FILES ${BOX2D_Collision_HDRS} DESTINATION include/Box2D/Collision)
-	install(FILES ${BOX2D_Shapes_HDRS} DESTINATION include/Box2D/Collision/Shapes)
-	install(FILES ${BOX2D_Common_HDRS} DESTINATION include/Box2D/Common)
-	install(FILES ${BOX2D_Dynamics_HDRS} DESTINATION include/Box2D/Dynamics)
-	install(FILES ${BOX2D_Contacts_HDRS} DESTINATION include/Box2D/Dynamics/Contacts)
-	install(FILES ${BOX2D_Joints_HDRS} DESTINATION include/Box2D/Dynamics/Joints)
-	install(FILES ${BOX2D_Rope_HDRS} DESTINATION include/Box2D/Rope)
+	#install(FILES ${BOX2D_General_HDRS} DESTINATION include/Box2D)
+	#install(FILES ${BOX2D_Collision_HDRS} DESTINATION include/Box2D/Collision)
+	#install(FILES ${BOX2D_Shapes_HDRS} DESTINATION include/Box2D/Collision/Shapes)
+	#install(FILES ${BOX2D_Common_HDRS} DESTINATION include/Box2D/Common)
+	#install(FILES ${BOX2D_Dynamics_HDRS} DESTINATION include/Box2D/Dynamics)
+	#install(FILES ${BOX2D_Contacts_HDRS} DESTINATION include/Box2D/Dynamics/Contacts)
+	#install(FILES ${BOX2D_Joints_HDRS} DESTINATION include/Box2D/Dynamics/Joints)
+	#install(FILES ${BOX2D_Rope_HDRS} DESTINATION include/Box2D/Rope)
 
 	# install libraries
-	if(BOX2D_BUILD_SHARED)
-		install(TARGETS Box2D_shared EXPORT Box2D-targets DESTINATION ${LIB_INSTALL_DIR})
-	endif()
-	if(BOX2D_BUILD_STATIC)
-		install(TARGETS Box2D EXPORT Box2D-targets DESTINATION ${LIB_INSTALL_DIR})
-	endif()
+	#if(BOX2D_BUILD_SHARED)
+		#install(TARGETS Box2D_shared EXPORT Box2D-targets DESTINATION ${LIB_INSTALL_DIR})
+	#endif()
+	#if(BOX2D_BUILD_STATIC)
+		#install(TARGETS Box2D EXPORT Box2D-targets DESTINATION ${LIB_INSTALL_DIR})
+	#endif()
 
 	# install build system hooks for third-party apps
-	install(EXPORT Box2D-targets DESTINATION ${LIB_INSTALL_DIR}/Box2D)
-	install(FILES Box2DConfig.cmake DESTINATION ${LIB_INSTALL_DIR}/Box2D)
-endif(BOX2D_INSTALL)
+	#install(EXPORT Box2D-targets DESTINATION ${LIB_INSTALL_DIR}/Box2D)
+	#install(FILES Box2DConfig.cmake DESTINATION ${LIB_INSTALL_DIR}/Box2D)
+#endif(BOX2D_INSTALL)
