--- a/Box2D/CMakeLists.txt
+++ b/Box2D/CMakeLists.txt
@@ -18,7 +18,11 @@ set(BOX2D_VERSION 2.3.0)
 
 
 if(IOS)
+if(IOS_PLATFORM STREQUAL "OS")
 SET (CMAKE_OSX_ARCHITECTURES "$$(ARCHS_UNIVERSAL_IPHONE_OS)")
+elseif(IOS_PLATFORM STREQUAL "SIMULATOR")
+SET (CMAKE_OSX_ARCHITECTURES "$(ARCHS_UNIVERSAL_IPHONE_OS)")
+endif()
 endif()
 
 # The Box2D library.
